# classes

./: .env.example  .gitignore  CLAUDE.md  F2F.ics  Other.ics  README.md  RULES.toml  Rom.ics  Zoom.ics  calendar_output.ics  college_calender.py  config.template.json  generate_ics.py  inspect_html.py  parse_calendar.py  parse_html.py  pyproject.toml  refresh_cookies.py  run_pipeline.sh  validate_rules.py
systemd/: college-calendar.service  college-calendar.timer
