[project]
name = "college-calender"
version = "0.1.0"
description = "Automated scraper for fetching college calendar from ASP.NET websites"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "icalendar>=6.1.0",
    "lxml>=6.0.2",
    "requests>=2.32.5",
]

[project.scripts]
scrape = "college_calender:main"
